add read only field
