# demo-user-proto/src/main/wire/com/apihug/demo/user/wire/api/UserApiCollector.java
@@ -237,6 +237,125 @@ public final class UserApiCollector implements Collector<OpenAPI, Schema, ApiRes
     }.build());
   }
 
+  private final void _build_component_com_apihug_demo_user_wire_api_sample_RequiredDemoRequest() {
+    //  Build of the component: RequiredDemoRequest proto: com/apihug/demo/user/proto/api/sample/sample.proto
+    Component<Schema, Schema> res = new Component();
+    componentMap.put("com.apihug.demo.user.wire.api.sample.RequiredDemoRequest", res);
+    res.setClzName("com.apihug.demo.user.wire.api.sample.RequiredDemoRequest");
+    res.setName("RequiredDemoRequest");
+    res.setProtoFrom("com/apihug/demo/user/proto/api/sample/sample.proto");
+    res.setProtoEntity("RequiredDemoRequest");
+    res.setDescription("This is an example request");
+    res.setPayload(new Builder<Schema>() {
+      @Override
+      public Schema build() {
+        Schema res  = new Schema();
+        res.setDescription("This is an example request");
+        res.setSpecVersion(SpecVersion.V30);
+        return res;
+      }
+    }.build());
+    // Add field 0 name
+    ComponentItem<Schema> _0 = new ComponentItem();
+    _0.setClz("java.lang.String");
+    _0.setName("name");
+    _0.setFieldName("name");
+    _0.setPayload(new Builder<Schema>() {
+      @Override
+      public Schema build() {
+        Schema res  = new Schema();
+        res.setDescription("name of the user");
+        res.setSpecVersion(SpecVersion.V30);
+        res.setNullable(false);
+        res.setExample("My Lord");
+        return res;
+      }
+    }.build());
+    _0.setValidation(new Builder<Validation>() {
+      @Override
+      public Validation build() {
+        Validation res = new Validation();
+        return res;
+      }
+    }.build());
+    res.addItem(_0);
+    // Add field 1 another
+    ComponentItem<Schema> _1 = new ComponentItem();
+    _1.setClz("java.lang.String");
+    _1.setName("another");
+    _1.setFieldName("another");
+    _1.setPayload(new Builder<Schema>() {
+      @Override
+      public Schema build() {
+        Schema res  = new Schema();
+        res.setDescription("another not blank sample");
+        res.setSpecVersion(SpecVersion.V30);
+        Map<String,String> _extensions = new LinkedHashMap();
+        _extensions.put("x-hope-validation-blank", "false");
+        res.setExtensions(_extensions);
+        res.setNullable(false);
+        res.setExample("another not blank");
+        return res;
+      }
+    }.build());
+    _1.setValidation(new Builder<Validation>() {
+      @Override
+      public Validation build() {
+        Validation res = new Validation();
+        return res;
+      }
+    }.build());
+    res.addItem(_1);
+    // Add field 2 an_another
+    ComponentItem<Schema> _2 = new ComponentItem();
+    _2.setClz("java.lang.String");
+    _2.setName("an_another");
+    _2.setFieldName("anAnother");
+    _2.setPayload(new Builder<Schema>() {
+      @Override
+      public Schema build() {
+        Schema res  = new Schema();
+        res.setDescription("another min length example");
+        res.setSpecVersion(SpecVersion.V30);
+        res.setMinLength(2);
+        res.setNullable(false);
+        res.setExample("another min length");
+        return res;
+      }
+    }.build());
+    _2.setValidation(new Builder<Validation>() {
+      @Override
+      public Validation build() {
+        Validation res = new Validation();
+        return res;
+      }
+    }.build());
+    res.addItem(_2);
+    // Add field 3 hidden_field
+    ComponentItem<Schema> _3 = new ComponentItem();
+    _3.setClz("java.lang.Long");
+    _3.setName("hidden_field");
+    _3.setFieldName("hiddenField");
+    _3.setPayload(new Builder<Schema>() {
+      @Override
+      public Schema build() {
+        Schema res  = new Schema();
+        res.setDescription("do not touch me directly you can not see me");
+        res.setSpecVersion(SpecVersion.V30);
+        res.setExample("1024");
+        return res;
+      }
+    }.build());
+    _3.setValidation(new Builder<Validation>() {
+      @Override
+      public Validation build() {
+        Validation res = new Validation();
+        return res;
+      }
+    }.build());
+    res.addItem(_3);
+  }
+
   private final void _build_component_com_apihug_demo_user_wire_api_admin_request_RegisterRequest(
       ) {
     //  Build of the component: RegisterRequest proto: com/apihug/demo/user/proto/api/admin/request/request.proto
@@ -648,102 +767,6 @@ public final class UserApiCollector implements Collector<OpenAPI, Schema, ApiRes
     res.addItem(_1);
   }
 
-  private final void _build_component_com_apihug_demo_user_wire_api_sample_RequiredDemoRequest() {
-    //  Build of the component: RequiredDemoRequest proto: com/apihug/demo/user/proto/api/sample/sample.proto
-    Component<Schema, Schema> res = new Component();
-    componentMap.put("com.apihug.demo.user.wire.api.sample.RequiredDemoRequest", res);
-    res.setClzName("com.apihug.demo.user.wire.api.sample.RequiredDemoRequest");
-    res.setName("RequiredDemoRequest");
-    res.setProtoFrom("com/apihug/demo/user/proto/api/sample/sample.proto");
-    res.setProtoEntity("RequiredDemoRequest");
-    res.setDescription("This is an example request");
-    res.setPayload(new Builder<Schema>() {
-      @Override
-      public Schema build() {
-        Schema res  = new Schema();
-        res.setDescription("This is an example request");
-        res.setSpecVersion(SpecVersion.V30);
-        return res;
-      }
-    }.build());
-    // Add field 0 name
-    ComponentItem<Schema> _0 = new ComponentItem();
-    _0.setClz("java.lang.String");
-    _0.setName("name");
-    _0.setFieldName("name");
-    _0.setPayload(new Builder<Schema>() {
-      @Override
-      public Schema build() {
-        Schema res  = new Schema();
-        res.setDescription("name of the user");
-        res.setSpecVersion(SpecVersion.V30);
-        res.setNullable(false);
-        res.setExample("My Lord");
-        return res;
-      }
-    }.build());
-    _0.setValidation(new Builder<Validation>() {
-      @Override
-      public Validation build() {
-        Validation res = new Validation();
-        return res;
-      }
-    }.build());
-    res.addItem(_0);
-    // Add field 1 another
-    ComponentItem<Schema> _1 = new ComponentItem();
-    _1.setClz("java.lang.String");
-    _1.setName("another");
-    _1.setFieldName("another");
-    _1.setPayload(new Builder<Schema>() {
-      @Override
-      public Schema build() {
-        Schema res  = new Schema();
-        res.setDescription("another not blank sample");
-        res.setSpecVersion(SpecVersion.V30);
-        Map<String,String> _extensions = new LinkedHashMap();
-        _extensions.put("x-hope-validation-blank", "false");
-        res.setExtensions(_extensions);
-        res.setNullable(false);
-        res.setExample("another not blank");
-        return res;
-      }
-    }.build());
-    _1.setValidation(new Builder<Validation>() {
-      @Override
-      public Validation build() {
-        Validation res = new Validation();
-        return res;
-      }
-    }.build());
-    res.addItem(_1);
-    // Add field 2 an_another
-    ComponentItem<Schema> _2 = new ComponentItem();
-    _2.setClz("java.lang.String");
-    _2.setName("an_another");
-    _2.setFieldName("anAnother");
-    _2.setPayload(new Builder<Schema>() {
-      @Override
-      public Schema build() {
-        Schema res  = new Schema();
-        res.setDescription("another min length example");
-        res.setSpecVersion(SpecVersion.V30);
-        res.setMinLength(2);
-        res.setNullable(false);
-        res.setExample("another min length");
-        return res;
-      }
-    }.build());
-    _2.setValidation(new Builder<Validation>() {
-      @Override
-      public Validation build() {
-        Validation res = new Validation();
-        return res;
-      }
-    }.build());
-    res.addItem(_2);
-  }
-
   private final void _build_service_com_apihug_demo_user_wire_api_admin_UserAdminService() {
     // ----------------------------------------------------
     // START-[Service Context] com.apihug.demo.user.wire.api.admin.UserAdminService
@@ -914,6 +937,8 @@ public final class UserApiCollector implements Collector<OpenAPI, Schema, ApiRes
     _build_component_com_apihug_demo_user_wire_infra_settings_UserAuthorityEnum();
     // Build for Enum :com.apihug.demo.user.wire.infra.settings.admin.UserStatusEnum
     _build_component_com_apihug_demo_user_wire_infra_settings_admin_UserStatusEnum();
+    // Build for Component : com.apihug.demo.user.wire.api.sample.RequiredDemoRequest
+    _build_component_com_apihug_demo_user_wire_api_sample_RequiredDemoRequest();
     // Build for Component : com.apihug.demo.user.wire.api.admin.request.RegisterRequest
     _build_component_com_apihug_demo_user_wire_api_admin_request_RegisterRequest();
     // Build for Component : com.apihug.demo.user.wire.api.admin.request.ChangePasswordRequest
@@ -922,8 +947,6 @@ public final class UserApiCollector implements Collector<OpenAPI, Schema, ApiRes
     _build_component_com_apihug_demo_user_wire_api_admin_response_CustomerRegisteredResponse();
     // Build for Component : com.apihug.demo.user.wire.api.admin.response.CustomerPasswordUpdatedResponse
     _build_component_com_apihug_demo_user_wire_api_admin_response_CustomerPasswordUpdatedResponse();
-    // Build for Component : com.apihug.demo.user.wire.api.sample.RequiredDemoRequest
-    _build_component_com_apihug_demo_user_wire_api_sample_RequiredDemoRequest();
     // Build For Service com.apihug.demo.user.wire.api.admin.UserAdminService
     _build_service_com_apihug_demo_user_wire_api_admin_UserAdminService();
     // Build OpenAPI information
